# lolibaso

./: Cargo.toml  README.md
lolibaso-macros/: Cargo.toml  README.md
lolibaso-macros/src/: api_requst.rs  api_response.rs  biz_err_ext.rs  err_enum.rs  get_config.rs  http_requst.rs  http_response.rs  init.rs  lib.rs  provider.rs
src/: configs.rs  entity.rs  flake_id.rs  lib.rs  provider.rs  repository.rs  result.rs  use_case.rs
src/async_runtime/: impl_tokio.rs  mod.rs
src/channel/: broadcast.rs  duplex.rs  mod.rs  unbounded.rs
src/http/: adapter.rs  api_macro.rs  error.rs  json.rs  mod.rs  parser.rs  query_decoder.rs  request.rs  response.rs  web_socket.rs
src/http/codec/: decoder.rs  encoder.rs  mod.rs
src/http/web_socket/: impl_actix_ws.rs  protocol.rs
src/runtime/: mod.rs
src/use_case/: long_run.rs
