[package]
name = "lolibaso"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/liuzsen/lolibaso"
description = "一个啰嗦但简洁的 web 框架"
authors = ["liuzsen"]
license = "Apache-2.0"
keywords = ["web", "framework", "clean-architecture"]
categories = ["web-programming::http-server"]
readme = "README.md"

[workspace]
members = ["lolibaso-macros"]

[workspace.dependencies]
anyhow = "1.0.98"
lolibaso-macros = { path = "lolibaso-macros", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
linkme = "0.3.32"
derive_more = { version = "2.0.1", features = ["from", "display", "from_str"] }

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
flaken = "0.2.2"
http = "1.3.1"
lolibaso-macros.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.actix-web]
version = "4"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt", "macros"]
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.bytes]
version = "1"
optional = true

[dependencies.bytestring]
version = "1"
optional = true

[dependencies.actix-ws]
version = "0.3.0"
optional = true

[features]
default = ["actix-web", "tokio", "actix-ws", "web-socket"]
actix-web = ["dep:actix-web"]
tokio = ["dep:tokio"]
web-socket = ["dep:futures-util", "bytes"]
futures-util = ["dep:futures-util"]
bytes = ["dep:bytes", "dep:bytestring"]
actix-ws = ["dep:actix-ws", "web-socket"]
